@@ -1,6 +1,6 @@
 {
-  "count": 101,
-  "uniques": 11,
+  "count": 102,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2024-09-13T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2024-09-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
