@@ -1,3 +1,12 @@
+2024-09-27T12:29:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11070646964 # 553
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-27
+* notice: last 14d: unq all: 12 102
+* notice: prev accum: outdated-unq outdated-all / unq all: 885 2731 / 896 2832
+* notice: next accum: outdated-unq outdated-all / unq all: 885 2731 / 897 2833
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-27]
+
 2024-09-26T01:10:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11043686463 # 550
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-26
